<resources>
    <string name="app_name">My calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_equals">=</string>
    <string name="_adition">+</string>
    <string name="_0">0</string>
    <string name="_exclamation">!</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_point">.</string>
    <string name="_clearOne"><![CDATA[<]]></string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_less">-</string>
    <string name="_multiplication">*</string>
    <string name="_division">/</string>
    <string name="_CE">CE</string>
    <string name="_00">00</string>
    <string name="_backspace"><![CDATA[<]]></string>
    <string name="_C">C</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Drawer -->
    <string name="calculator">Calculadora</string>
    <string name="history">Histórico</string>
    <string name="other">Outros</string>
    <string name="sign_out">Sair</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="map">Map</string>

</resources>
