<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_calculator"
            android:title="@string/calculator"
            />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history"
            />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/map"
            />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_signout"
                android:title="@string/sign_out"
                />
        </menu>
    </item>

</menu>