<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragment.CalculatorFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_visor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#454545"
        android:padding="16dp"
        android:shadowColor="#636161"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="#FDFDFD"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/linearLayout_2"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:foregroundTint="#FFFFFF"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_C"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickSymbol"
                android:tag="@string/_C"
                android:backgroundTint="#AFAEAE"
                android:text="@string/_C"
                android:textColor="#F6F5F5"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#AFAEAE"
                android:onClick="onClickSymbol"
                android:tag="@string/_clearOne"
                android:text="@string/_clearOne"
                android:textColor="#F6F5F5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_exclamation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickHistory"
                android:tag="@string/_exclamation"
                android:backgroundTint="#FB962D"
                android:text="@string/_exclamation"
                android:textColor="#F6F5F5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_division"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickSymbol"
                android:tag="@string/_division"
                android:backgroundTint="#FB962D"
                android:text="@string/_division"
                android:textColor="#F6F5F5"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_7"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onClickSymbol"
                android:tag="7"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:backgroundTint="#504E4E"
                android:text="@string/_7"
                />

            <Button
                android:id="@+id/button_8"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onClickSymbol"
                android:tag="@string/_8"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:backgroundTint="#504E4E"
                android:text="@string/_8"
                />

            <Button
                android:id="@+id/button_9"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onClickSymbol"
                android:tag="@string/_9"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:backgroundTint="#504E4E"
                android:text="@string/_9"
                />

            <Button
                android:id="@+id/button_multiplication"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onClickSymbol"
                android:tag="@string/_multiplication"
                android:backgroundTint="#FB962D"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:text="@string/_multiplication"
                />

        </LinearLayout>

        <LinearLayout
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onClickSymbol"
                android:tag="@string/_4"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:backgroundTint="#504E4E"
                android:text="@string/_4"
                />

            <Button
                android:id="@+id/button_5"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onClickSymbol"
                android:tag="@string/_5"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:backgroundTint="#504E4E"
                android:text="@string/_5"
                />

            <Button
                android:id="@+id/button_6"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onClickSymbol"
                android:tag="@string/_6"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:backgroundTint="#504E4E"
                android:text="@string/_6"
                />

            <Button
                android:id="@+id/button_less"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onClickSymbol"
                android:tag="@string/_less"
                android:backgroundTint="#FB962D"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:text="@string/_less"
                />

        </LinearLayout>

        <LinearLayout
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickSymbol"
                android:tag="@string/_1"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:backgroundTint="#504E4E"
                android:text="@string/_1"/>

            <Button
                android:id="@+id/button_2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onClickSymbol"
                android:tag="@string/_2"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:backgroundTint="#504E4E"
                android:text="@string/_2"
                />

            <Button
                android:id="@+id/button_3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onClickSymbol"
                android:tag="@string/_3"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:backgroundTint="#504E4E"
                android:text="@string/_3"
                />

            <Button
                android:id="@+id/button_adition"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onClickSymbol"
                android:tag="@string/_adition"
                android:backgroundTint="#FB962D"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:text="@string/_adition"
                />

        </LinearLayout>

        <LinearLayout
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_0"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onClickSymbol"
                android:tag="@string/_0"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:backgroundTint="#504E4E"
                android:text="@string/_0"
                />

            <Button
                android:id="@+id/button_point"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onClickSymbol"
                android:tag="@string/_point"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:backgroundTint="#504E4E"
                android:text="@string/_point"
                />

            <Button
                android:id="@+id/button_equals"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onClickEquals"
                android:tag="@string/_equals"
                android:backgroundTint="#FB962D"
                android:textColor="#F6F5F5"
                android:textSize="30sp"
                android:text="@string/_equals"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>